wip: Improve error handling; add a chunker for PDF